--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,12 +15,12 @@ jobs:
         # syntax explanation:
         # https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions#example-including-additional-values-into-combinations
         include:
-          - os: macos-latest
-            build: eval $(opam env) && cd analysis && make test
-            artifact-folder: darwin
-          # - os: ubuntu-18.04
+          # - os: macos-latest
           #   build: eval $(opam env) && cd analysis && make test
-          #   artifact-folder: linux
+          #   artifact-folder: darwin
+          - os: ubuntu-18.04
+            build: eval $(opam env) && cd analysis && make test
+            artifact-folder: linux
           # - os: windows-latest
           #   build: "cd analysis && & $env:CYGWIN_ROOT\\bin\\ocaml-env exec -- make test"
           #   artifact-folder: win32
