--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,13 +93,13 @@ jobs:
     - run: npm ci
     - run: npm run compile
     
-    - name: Download MacOS binary
-      uses: actions/download-artifact@v3.0.0
-      with:
-        name: macos-latest
-        path: ./server/analysis_binaries
-    - run: tar -xvf binary.tar
-      working-directory: ./server/analysis_binaries
+    # - name: Download MacOS binary
+    #   uses: actions/download-artifact@v3.0.0
+    #   with:
+    #     name: macos-latest
+    #     path: ./server/analysis_binaries
+    # - run: tar -xvf binary.tar
+    #   working-directory: ./server/analysis_binaries
 
     - name: Download Linux binary
       uses: actions/download-artifact@v3.0.0
@@ -109,13 +109,13 @@ jobs:
     - run: tar -xvf binary.tar
       working-directory: ./server/analysis_binaries
 
-    - name: Download Windows binary
-      uses: actions/download-artifact@v3.0.0
-      with:
-        name: windows-latest
-        path: ./server/analysis_binaries
-    - run: tar -xvf binary.tar
-      working-directory: ./server/analysis_binaries
+    # - name: Download Windows binary
+    #   uses: actions/download-artifact@v3.0.0
+    #   with:
+    #     name: windows-latest
+    #     path: ./server/analysis_binaries
+    # - run: tar -xvf binary.tar
+    #   working-directory: ./server/analysis_binaries
 
     - name: Cleanup tar file
       run: rm binary.tar
