--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,9 +131,6 @@ jobs:
       id: vars
       run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
 
-    - run: echo "TAG=nightly" >> $GITHUB_ENV
-    - run: 'echo "TAG: $TAG"'
-
     - name: Package Extension
       run: npx vsce package -o rescript-vscode-${{ steps.vars.outputs.sha_short }}.vsix
  
@@ -144,7 +141,7 @@ jobs:
         automatic_release_tag: "nightly"
         prerelease: true
         title: "nightly"
-        files: rescript-vscode-${{ steps.vars.outputs.sha_short }}.vsix
+        files: rescript-vscode.vsix
  
     - uses: actions/upload-artifact@v2
       with:
