feat(ci): add a new job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -137,18 +137,34 @@ jobs:
     # - name: Rename vsix file
     #   run: cp rescript-vscode-${{ steps.vars.outputs.sha_short }}.vsix rescript-vscode.vsix
  
-    - name: Publish nightly
-      if: ${{ github.event_name == 'push' }}
-      run: cp rescript-vscode-${{ steps.vars.outputs.sha_short }}.vsix rescript-vscode.vsix
-      uses: marvinpinto/action-automatic-releases@latest
-      with:
-        repo_token: "${{ secrets.GITHUB_TOKEN }}"
-        automatic_release_tag: "nightly"
-        prerelease: true
-        title: "nightly"
-        files: rescript-vscode.vsix
+    # - name: Publish nightly
+    #   uses: marvinpinto/action-automatic-releases@latest
+    #   with:
+    #     repo_token: "${{ secrets.GITHUB_TOKEN }}"
+    #     automatic_release_tag: "nightly"
+    #     prerelease: true
+    #     title: "nightly"
+    #     files: rescript-vscode.vsix
  
     - uses: actions/upload-artifact@v2
       with:
         name: rescript-vscode-${{ steps.vars.outputs.sha_short }}.vsix
         path: rescript-vscode-${{ steps.vars.outputs.sha_short }}.vsix
+
+  release:
+    needs: package
+    runs-on: ubuntu-18.04
+    if: ${{ github.event_name == 'push' }}
+
+    steps:
+      - name: Copy and Rename vsix file
+        run: cp rescript-vscode-${{ steps.vars.outputs.sha_short }}.vsix rescript-vscode.vsix
+
+      - name: Release nightly
+      - uses: marvinpinto/action-automatic-releases@latest
+        with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: "nightly"
+          prerelease: true
+          title: "nightly"
+          files: rescript-vscode.vsix
