--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -135,9 +135,11 @@ jobs:
       run: npx vsce package -o rescript-vscode-${{ steps.vars.outputs.sha_short }}.vsix
 
     - name: Rename vsix file
+      if: github.ref == 'refs/heads/master'
       run: cp rescript-vscode-${{ steps.vars.outputs.sha_short }}.vsix rescript-vscode.vsix
 
     - name: Publish nightly
+      if: github.ref == 'refs/heads/master'
       uses: marvinpinto/action-automatic-releases@latest
       with:
         repo_token: "${{ secrets.GITHUB_TOKEN }}"
