--- a/analysis/src/dune
+++ b/analysis/src/dune
@@ -1,9 +1,6 @@
-(executable
- (public_name rescript-editor-analysis)
- (modes byte exe)
- ; The main module that will become the binary.
- (name Cli)
- (flags
+(library
+  (name analysis)
+  (flags
   (-w "+6+26+27+32+33+39"))
  ; Depends on:
  (libraries unix str ext ml jsonlib syntax reanalyze))
