--- a/analysis/bin/dune
+++ b/analysis/bin/dune
@@ -2,8 +2,6 @@
  (public_name rescript-editor-analysis)
  (modes byte exe)
  ; The main module that will become the binary.
- (name Cli)
- (flags
-  (-w "+6+26+27+32+33+39"))
+ (name Main)
  ; Depends on:
- (libraries unix str ext ml jsonlib syntax reanalyze))
+ (libraries analysis))
