--- a/analysis/dune-project
+++ b/analysis/dune-project
@@ -11,8 +11,8 @@
 (bug_reports "https://github.com/rescript-lang/rescript-vscode/issues")
 
 (package
- (name rescript-vscode)
- (synopsis "ReScript vscode support")
+ (name analysis)
+ (synopsis "ReScript Analysis")
  (depends
   (ocaml
    (>= 4.10))
