--- a/analysis/bin/dune
+++ b/analysis/bin/dune
@@ -1,6 +1,6 @@
-(library
-  (name analysis)
-  (flags
-  (-w "+6+26+27+32+33+39"))
+(executable
+ (modes byte exe)
+ ; The main module that will become the binary.
+ (name main)
  ; Depends on:
  (libraries analysis))
