--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,6 +49,9 @@ jobs:
       with:
         ocaml-compiler: 4.14.x
 
+    - name: Install deps
+      run: opam install . --deps-only
+
     - name: Use Node.js
       uses: actions/setup-node@v3
       with:
