--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,11 +47,11 @@ jobs:
 
     - uses: actions/checkout@v3
 
-    # - name: Cache OCaml's opam
-    #   uses: actions/cache@v3
-    #   with:
-    #     path: ~/.opam
-    #     key: ${{matrix.os}}-rescript-vscode-v4
+    - name: Cache OCaml's opam
+      uses: actions/cache@v3
+      with:
+        path: ~/.opam
+        key: ${{matrix.os}}-rescript-vscode-v4
 
     - name: Use OCaml
       uses: ocaml/setup-ocaml@v2
