--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,7 +77,7 @@ jobs:
       run: opam exec -- make
 
     - name: Test
-      run: opam exec -- make test
+      run: dune exec -- rescript-editor-analysis debug-dump verbose definition analysis/tests/src/Debug.res 5 14
 
     # Also avoids artifacts upload permission loss:
     # https://github.com/actions/upload-artifact/tree/ee69f02b3dfdecd58bb31b4d133da38ba6fe3700#permission-loss
