--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,7 +78,9 @@ jobs:
 
     - name: Debug
       working-directory: analysis/tests
-      run: ../../rescript-editor-analysis.exe debug-dump verbose definition src/Debug.res 5 14
+      run: |
+        npm run build
+        ../../rescript-editor-analysis.exe debug-dump verbose definition src/Debug.res 5 14
 
     # Also avoids artifacts upload permission loss:
     # https://github.com/actions/upload-artifact/tree/ee69f02b3dfdecd58bb31b4d133da38ba6fe3700#permission-loss
